@@ -106,6 +106,10 @@ public class FileTxnSnapLog {
                         + this.dataDir);
             }
         }
+        if (!this.dataDir.canWrite()) {
+            throw new DatadirException("Cannot write to data directory " + this.dataDir);
+        }
+
         if (!this.snapDir.exists()) {
             // by default create this directory, but otherwise complain instead
             // See ZOOKEEPER-1161 for more details
@@ -122,6 +126,10 @@ public class FileTxnSnapLog {
                         + this.snapDir);
             }
         }
+        if (!this.snapDir.canWrite()) {
+            throw new DatadirException("Cannot write to snap directory " + this.snapDir);
+        }
+
         txnLog = new FileTxnLog(this.dataDir);
         snapLog = new FileSnap(this.snapDir);
     }
