@@ -389,6 +389,9 @@ BUGFIXES:
   ZOOKEEPER-2576: Missing changes (cleanup build.xml)
   (Patrick Hunt via rgs)
 
+  ZOOKEEPER-2579: ZooKeeper server should verify that dataDir and
+  snapDir are writeable before starting (Abraham Fine via phunt)
+
 IMPROVEMENTS:
   ZOOKEEPER-2024 Major throughput improvement with mixed workloads (Kfir Lev-Ari via shralex)
 
